Update pom to add Spring Modulith - modular monolith